--- a/SpectatorFootball/MainWindow.xaml
+++ b/SpectatorFootball/MainWindow.xaml
@@ -26,7 +26,7 @@
                 <MenuItem Name="MenuDraft" Header="Draft" Click= "Show_LeagueDraft" />
                 <MenuItem Name="MenuFreeAgency" Header="Free Agency" Click= "Show_FreeAgency" />
                 <MenuItem Name="MenuTrainingCamp" Header="Training Camp" Click= "Show_TrainingCamp" />
-                <MenuItem Name="MenuInjuries" Header="Injuries" />
+                <MenuItem Name="MenuInjuries" Header="Injuries" Click= "Show_LeagueInjuries" />
                 <MenuItem Name="MenuPlayoffs" Header="Playoffs" />
                 <MenuItem Name="MenuLeagueInfo" Header="League Info" />
             </MenuItem>
