--- a/SpectatorFootball/WindowsLeague/LeagueFreeAgencyUX.xaml
+++ b/SpectatorFootball/WindowsLeague/LeagueFreeAgencyUX.xaml
@@ -31,7 +31,7 @@
                 <Button Name="help_btn" Focusable="false" Style="{StaticResource appHelpBTN}" Click="help_btn_Click">Help ?</Button>
             </StackPanel>
         </Grid>
-        <StackPanel Orientation="Vertical">
+        <StackPanel Orientation="Vertical" Width="1000">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="top" >
                 <Button Name="btnFreeAgency" Style="{StaticResource appHelpBTN}" Width="200" Click="btnFreeAgency_Click">Execute Free Agency</Button>
             </StackPanel>
