--- a/SpectatorFootball/WindowsLeague/TrainingCampUX.xaml
+++ b/SpectatorFootball/WindowsLeague/TrainingCampUX.xaml
@@ -27,7 +27,7 @@
                 <Button Name="help_btn" Focusable="false" Style="{StaticResource appHelpBTN}" Click="help_btn_Click">Help ?</Button>
             </StackPanel>
         </Grid>
-        <StackPanel Orientation="Vertical">
+        <StackPanel Orientation="Vertical" Width="1000">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="top" >
                 <Button Name="btnTrainingCamp" Style="{StaticResource appHelpBTN}" Width="200" Click="btnTrainingCamp_Click">Start Training Camp</Button>
             </StackPanel>
