--- a/SpectatorFootball/App.xaml
+++ b/SpectatorFootball/App.xaml
@@ -532,11 +532,13 @@
             <Setter Property="FontFamily" Value="Verdana"/>
             <Setter Property="FontSize" Value="24"/>
             <Setter Property="FontWeight" Value="normal"/>
+            <Setter Property="Foreground" Value="White" />
         </Style>
         <Style TargetType="Label" x:Key="GameBar2Fonts">
             <Setter Property="FontFamily" Value="Verdana"/>
             <Setter Property="FontSize" Value="12"/>
             <Setter Property="FontWeight" Value="normal"/>
+            <Setter Property="Foreground" Value="White" />
         </Style>
     </Application.Resources>
 </Application>
