--- a/SpectatorFootball/WindowsLeague/Game_Window.xaml
+++ b/SpectatorFootball/WindowsLeague/Game_Window.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SpectatorFootball.WindowsLeague"
         mc:Ignorable="d"
-        Height="780" Width="1220" WindowStyle="ToolWindow"  ResizeMode="NoResize" ShowInTaskbar="False" Topmost="True">
+        Height="780" Width="1220" WindowStyle="ToolWindow"  ResizeMode="CanResizeWithGrip"  ShowInTaskbar="false" Topmost="True">
     <!--     <Border Style="{StaticResource popupBD}" BorderThickness="5"> -->
         <StackPanel Orientation="Vertical">
         <StackPanel Name="Game_intro_pnl" Style="{StaticResource popupSP}" Height="770" Width="1210" Orientation="Vertical" >
@@ -121,11 +121,13 @@
                         <Button Name="Game_Close" Click="Game_close" Height="40" Width="110" Margin="0,0,5,0" Style="{StaticResource CloseGame}">Exit Game</Button>
                     </StackPanel>
                 </Grid>
-                <StackPanel>
-                    <Canvas Name="MyCanvas"  Focusable="True" Background="LightBlue" Height="710" Width="1210">
-                        <Rectangle Name="background" Height="680" Width="2480" Stretch="Fill" Canvas.Top="0"  Canvas.Left="0" />
+            <StackPanel HorizontalAlignment="Center">
+                <Border BorderThickness="1">
+                    <Canvas Name="MyCanvas"  Focusable="True"  Background="LightBlue" Height="710" Width="1210">
+                        <Rectangle Name="background" Height="680" Width="2480" Stretch="Fill" Canvas.Top="0"  Canvas.Left="0" /> 
                     </Canvas>
-                </StackPanel>
+                </Border>
+            </StackPanel>
             </StackPanel>
         </StackPanel>
 <!--    </Border> -->
