--- a/SpectatorFootball/WindowsLeague/Game_Window.xaml
+++ b/SpectatorFootball/WindowsLeague/Game_Window.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SpectatorFootball.WindowsLeague"
         mc:Ignorable="d"
-        Height="780" Width="1220" WindowStyle="ToolWindow"  ResizeMode="CanResizeWithGrip"  ShowInTaskbar="False" Topmost="True">
+        Height="780" Width="1220" WindowStyle="ToolWindow"  ResizeMode="CanResizeWithGrip"  ShowInTaskbar="False" Topmost="true">
     <!--     <Border Style="{StaticResource popupBD}" BorderThickness="5"> -->
         <StackPanel Orientation="Vertical">
         <StackPanel Name="Game_intro_pnl" Style="{StaticResource popupSP}" Height="770" Width="1210" Orientation="Vertical" >
@@ -121,12 +121,12 @@
                         <Button Name="Game_Close" Click="Game_close" Height="40" Width="110" Margin="0,0,5,0" Style="{StaticResource CloseGame}">Exit Game</Button>
                     </StackPanel>
                 </Grid>
-            <StackPanel HorizontalAlignment="Center">
-                <Border BorderThickness="1">
-                    <Canvas Name="MyCanvas"  Focusable="True"  Background="LightBlue" Height="710" Width="1210">
+            <StackPanel HorizontalAlignment="right">
+<!--                <Border BorderThickness="1"> -->
+                    <Canvas Name="MyCanvas"  Focusable="True"  Background="LightBlue"  Height="710" Width="1210">
                         <Rectangle Name="background" Height="680" Width="2480" Stretch="Fill" Canvas.Top="0"  Canvas.Left="0" /> 
                     </Canvas>
-                </Border>
+<!--                </Border> -->
             </StackPanel>
             </StackPanel>
         </StackPanel>
