--- a/SpectatorFootball/WindowsLeague/Game_Window.xaml
+++ b/SpectatorFootball/WindowsLeague/Game_Window.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SpectatorFootball.WindowsLeague"
         mc:Ignorable="d"
-        Height="780" Width="1220" WindowStyle="None"  ResizeMode="NoResize"  ShowInTaskbar="False" Topmost="true">
+        Height="780" Width="1220" WindowStyle="None"  ResizeMode="NoResize"  ShowInTaskbar="False" Topmost="True">
         <Border Style="{StaticResource popupBD}" BorderThickness="5"> 
         <StackPanel Orientation="Vertical">
         <StackPanel Name="Game_intro_pnl" Style="{StaticResource popupSP}" Height="770" Width="1210" Orientation="Vertical" >
@@ -124,7 +124,7 @@
             <StackPanel HorizontalAlignment="right">
 <!--                <Border BorderThickness="5" BorderBrush="Black"> -->
                     <Canvas Name="MyCanvas" Focusable="True" ClipToBounds="True" Background="LightBlue"  Height="710" Width="1210" >
-                        <Rectangle Name="background" Height="900" Width="2480" Stretch="Fill" Canvas.Top="0"  Canvas.Left="0" /> 
+                        <Rectangle Name="background" Height="1280" Width="2680" Stretch="Fill" Canvas.Top="0"  Canvas.Left="0" /> 
                     </Canvas>
 <!--                </Border> --> 
             </StackPanel>
