Working on dialog to change game ball color

--- a/SpectatorFootball/App.xaml
+++ b/SpectatorFootball/App.xaml
@@ -65,6 +65,13 @@
             <Setter Property="Foreground" Value="Black"/>
             <Setter Property="Background" Value="LightBlue"/>
         </Style>
+        <!-- help Panel -->
+        <Style TargetType="StackPanel" x:Key="HelpSP">
+            <Setter Property="Background" Value="LightBlue"/>
+        </Style>
+        <Style TargetType="ComboBoxItem" x:Key="HelpCI">
+            <Setter Property="Background" Value="LightBlue"/>
+        </Style>
         <!-- Help Button -->
         <Style TargetType="Button" x:Key="appHelpBTN">
             <Setter Property="Width" Value="100"/>
@@ -343,6 +350,13 @@
             <Setter Property="FontWeight" Value="Normal"/>
             <Setter Property="Foreground" Value="Black"/>
             <Setter Property="Background" Value="White"/>
+            <Setter Property="Height" Value="25"/>
+        </Style>
+        <Style TargetType="ComboBox" x:Key="ComboBoxstyleBlue">
+            <Setter Property="FontFamily" Value="Verdana"/>
+            <Setter Property="FontWeight" Value="Normal"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Background" Value="LightBlue"/>
             <Setter Property="Height" Value="25"/>
         </Style>
 
